Sua va them doctor

--- a/public/appointment.html
+++ b/public/appointment.html
@@ -122,7 +122,7 @@
 </script>
 <script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
 <script type="module" src="js/index.js"></script>
-<script type="module" src="js/medicine.js"></script>
+<script type="module" src="js/doctor.js"></script>
 <!-- <script>
   // Initial variable values
   var userPic = document.getElementById('user-sub-menu');
