--- a/public/login.html
+++ b/public/login.html
@@ -85,11 +85,11 @@
                 </div>
                 <div class="select-box">
                     <select id="enterRole" required>
-                        <option value="" disabled selected>Select Role</option>
-                        <option value="role1">User</option>
-                        <option value="role2">Staff</option>
-                        <option value="role3">Doctor</option>
-                        <option value="role4">Nurse</option>
+                        <option value="User" disabled selected>Select Role</option>
+                        <option value="User">User</option>
+                        <option value="Staff">Staff</option>
+                        <option value="Doctor">Doctor</option>
+                        <option value="Nurse">Nurse</option>
                         <!-- try to make another role for admin -->
                     </select>
                 </div>
@@ -118,6 +118,7 @@
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script type="module" src="js/class.js"></script>
 <script type="module" src="js/login.js"></script>
 
 </html>
