--- a/public/doctor.html
+++ b/public/doctor.html
@@ -57,14 +57,14 @@
 
 
 <div class="container">
-  <h1>Buy Medicines</h1>
+  <h1>Our Doctor</h1>
   <div class="Medrow">
-    <div id="AddMedicine" class="medicinesItem">
+    <div id="AddDoctor" class="medicinesItem">
       <i class="fa-solid fa-plus"></i>
       <h2>Add Medicine</h2>
     </div>
     <script>
-      document.getElementById("AddMedicine").addEventListener('click', function(event) {
+      document.getElementById("AddDoctor").addEventListener('click', function(event) {
         document.querySelector('.Medicines-popup').classList.add("active");
       });
     </script>
@@ -79,37 +79,21 @@
         document.querySelector('.Medicines-popup').classList.remove("active");
       });
       </script>
-      <div class="form-box login">
+      <div class="Medrow">
+        <div id="AddDoctor" class="medicinesItem">
+          <i class="fa-solid fa-plus"></i>
           <h2>Add Medicine</h2>
-          <form>
-              <div class="input-box">
-                  <input type="text" id="medName" required>
-                  <label>Name</label>
-              </div>
-              <div class="input-box">
-                  <input type="number" id="medNumber" required>
-                  <label>Number</label>
-              </div>
-              <div class="input-box">
-                  <input type="text" id="medManuf" required>
-                  <label>Manufacturers</label>
-              </div>
-              <div class="input-box">
-                  <input type="date" id="medExpDate" required>
-                  <label>Expire Date</label>
-              </div>
-              <div class="input-box">
-                <input type="number" id="medPrice" required>
-                <label>Price</label>
-              </div>
-              <div class="error-notify hide">
-                  Please fill in.
-              </div>
-          </form>
-          <button class="btn" id="addMedbtn">Add</button>
         </div>
+        <script>
+          const requestTab = document.getElementById("AddDoctor");
+          requestTab.addEventListener('click', function(event) {
+            window.location.href = "requestADMIN.html";
+          });
+        </script>
       </div>
+
     </div>
+  </div>
 </div>
 
 
@@ -122,7 +106,7 @@
 </script>
 <script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
 <script type="module" src="js/index.js"></script>
-<script type="module" src="js/medicine.js"></script>
+<script type="module" src="js/doctor.js"></script>
 <!-- <script>
   // Initial variable values
   var userPic = document.getElementById('user-sub-menu');
