--- a/public/requestADMIN.html
+++ b/public/requestADMIN.html
@@ -81,32 +81,9 @@
       </script>
       <div class="form-box login">
           <h2>Add Medicine</h2>
-          <form>
-              <div class="input-box">
-                  <input type="text" id="medName" required>
-                  <label>Name</label>
-              </div>
-              <div class="input-box">
-                  <input type="number" id="medNumber" required>
-                  <label>Number</label>
-              </div>
-              <div class="input-box">
-                  <input type="text" id="medManuf" required>
-                  <label>Manufacturers</label>
-              </div>
-              <div class="input-box">
-                  <input type="date" id="medExpDate" required>
-                  <label>Expire Date</label>
-              </div>
-              <div class="input-box">
-                <input type="number" id="medPrice" required>
-                <label>Price</label>
-              </div>
-              <div class="error-notify hide">
-                  Please fill in.
-              </div>
-          </form>
-          <button class="btn" id="addMedbtn">Add</button>
+          <p>blah</p>
+          <button class="btn" id="yesReqbtn">Accept</button>
+          <button class="btn" id="noReqbtn">Reject</button>
         </div>
       </div>
     </div>
@@ -122,7 +99,7 @@
 </script>
 <script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
 <script type="module" src="js/index.js"></script>
-<script type="module" src="js/medicine.js"></script>
+<script type="module" src="js/requestADMIN.js"></script>
 <!-- <script>
   // Initial variable values
   var userPic = document.getElementById('user-sub-menu');
