--- a/public/equipment.html
+++ b/public/equipment.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Service</title>
+  <title>Medicines</title>
 
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <!--  -->
   <header>
     <div class="logo">
         <a href="index.html"><img src="images/logos/placeholder.jpg"></a>
@@ -53,44 +52,64 @@
         </div>
       </nav>
 </header>
-<!--  -->
+
+
+
 
 <div class="container">
-  <h1>Our Service</h1>
-  <div class="row">
-    <div class="service">
-      <i class="fa-solid fa-hospital-user"></i>
-      <h2>Appointment</h2>
-      <p>Lorem ipsum. king king shit</p>
-    </div>
-    <div class="service">
-      <i class="fa-solid fa-receipt"></i>
-      <h2>Medical History</h2>
-      <p>Lorem ipsum. king king shit</p>
-    </div>
-    <div class="service">
-      <i class="fa-solid fa-user-doctor"></i>
-      <h2>Our Doctor</h2>
-      <p>Lorem ipsum. king king shit</p>
-    </div>
-    <div class="service">
-      <i class="fa-solid fa-kit-medical"></i>
-      <h2>Equipment</h2>
-      <p>Lorem ipsum. king king shit</p>
-    </div>
-    <div id="MedicineTab" class="service">
-      <i class="fa-solid fa-pills"></i>
-      <h2>Medicines</h2>
-      <p>Lorem ipsum. king king shit</p>
+  <h1>Manage Equipment</h1>
+  <div class="Medrow">
+    <div id="AddMedicine" class="medicinesItem">
+      <i class="fa-solid fa-plus"></i>
+      <h2>Manage Equipment</h2>
     </div>
     <script>
-      const MedicineTab = document.getElementById("MedicineTab");
-      MedicineTab.addEventListener('click', function(event) {
-        localStorage.removeItem('username');
-        window.location.href = "medicine.html";
+      document.getElementById("AddMedicine").addEventListener('click', function(event) {
+        document.querySelector('.Medicines-popup').classList.add("active");
       });
     </script>
   </div>
+  <div class="Medicines-popup">
+    <div class="wrapper">
+      <span class="icon-close">
+        <i class="fa-solid fa-xmark"></i>
+      </span>
+      <script>
+        document.querySelector('.icon-close').addEventListener('click', function(event) {
+        document.querySelector('.Medicines-popup').classList.remove("active");
+      });
+      </script>
+      <div class="form-box login">
+          <h2>Manage Equipment</h2>
+          <form>
+              <div class="input-box">
+                  <input type="text" id="medName" required>
+                  <label>Name</label>
+              </div>
+              <div class="input-box">
+                  <input type="number" id="medNumber" required>
+                  <label>Number</label>
+              </div>
+              <div class="input-box">
+                  <input type="text" id="medManuf" required>
+                  <label>Manufacturers</label>
+              </div>
+              <div class="input-box">
+                  <input type="date" id="medExpDate" required>
+                  <label>Expire Date</label>
+              </div>
+              <div class="input-box">
+                <input type="number" id="medPrice" required>
+                <label>Price</label>
+              </div>
+              <div class="error-notify hide">
+                  Please fill in.
+              </div>
+          </form>
+          <button class="btn" id="addMedbtn">Add</button>
+        </div>
+      </div>
+    </div>
 </div>
 
 
@@ -98,8 +117,12 @@
 
 
 </body>
+<script>
+  // make the item detect negative number
+</script>
 <script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
 <script type="module" src="js/index.js"></script>
+<script type="module" src="js/medicine.js"></script>
 <!-- <script>
   // Initial variable values
   var userPic = document.getElementById('user-sub-menu');
