--- a/public/requestADMIN.html
+++ b/public/requestADMIN.html
@@ -11,40 +11,40 @@
 <body>
   <header>
     <div class="logo">
-        <a href="index.html"><img src="images/logos/placeholder.jpg"></a>
+        <a href="index.html" title="Home"><img src="images/logos/placeholder.jpg" alt=""></a>
         <span>HospitalGP
     </div>
     <nav class="navigation">
         <a href="index.html">Home</a>
-        <a href="#">About</a>
-        <a href="#">Service</a>
-        <a href="#">Contact</a>
+        <a href="about.html">About</a>
+        <a href="service.html">Service</a>
+        <a href="contact.html">Contact</a>
         <button class="btnLogin-popup" onclick="window.location.href='login.html'">Login</button>
-        <img src="images/profiles/user.png" id="user-sub-menu" class="user-pic">
+        <img src="images/profiles/user.png" alt="" id="user-sub-menu" class="user-pic">
         <div class="sub-menu-wrap">
           <div class="sub-menu">
             <div class="user-info">
-              <img src="images/profiles/user.png">
+              <img src="images/profiles/user.png" alt="">
               <h3 id="myUsername">Username</h3>
             </div>
             <hr>
             <a href="#" class="sub-menu-link">
-              <img src="images/profiles/profile.png">
+              <img src="images/profiles/profile.png" alt="">
               <p>Edit Profile</p>
               <span>></span>
             </a>
             <a href="#" class="sub-menu-link">
-              <img src="images/profiles/setting.png">
+              <img src="images/profiles/setting.png" alt="">
               <p>Settings & Privacy</p>
               <span>></span>
             </a>
             <a href="index.html" class="sub-menu-link">
-              <img src="images/profiles/help.png">
+              <img src="images/profiles/help.png" alt="">
               <p>Help & Support</p>
               <span>></span>
             </a>
             <a href="index.html" id="logout" class="sub-menu-link">
-              <img src="images/profiles/logout.png">
+              <img src="images/profiles/logout.png" alt="">
               <p>Logout</p>
               <span>></span>
             </a>
