--- a/public/doctor.html
+++ b/public/doctor.html
@@ -65,12 +65,13 @@
     </div>
     <script>
       document.getElementById("AddDoctor").addEventListener('click', function(event) {
-        document.querySelector('.Medicines-popup').classList.add("active");
+        window.location.href = "requestADMIN.html";
       });
     </script>
   </div>
+  
   <div class="Medicines-popup">
-    <div class="wrapper">
+    <div class="wrapper doctor">
       <span class="icon-close">
         <i class="fa-solid fa-xmark"></i>
       </span>
@@ -79,19 +80,9 @@
         document.querySelector('.Medicines-popup').classList.remove("active");
       });
       </script>
-      <div class="Medrow">
-        <div id="AddDoctor" class="medicinesItem">
-          <i class="fa-solid fa-plus"></i>
-          <h2>Add Medicine</h2>
-        </div>
-        <script>
-          const requestTab = document.getElementById("AddDoctor");
-          requestTab.addEventListener('click', function(event) {
-            window.location.href = "requestADMIN.html";
-          });
-        </script>
-      </div>
-
+      <h2 id="Username">YOOO</h2>
+      <p id="Email">yo</p>
+      <button id="AppointBtn">SUP</button>
     </div>
   </div>
 </div>
