--- a/public/appointment.html
+++ b/public/appointment.html
@@ -61,7 +61,7 @@
   <div class="Medrow">
     <div id="AddAppointment" class="appointmentsItem">
       <i class="fa-solid fa-plus"></i>
-      <h2>Book Appointment</h2>
+      <h2>Manage Appointment</h2>
     </div>
     <script>
       document.getElementById("AddAppointment").addEventListener('click', function(event) {
@@ -80,33 +80,38 @@
       });
       </script>
       <div class="form-box login">
-          <h2>Book Appointment</h2>
+          <h2>Manage Appointment</h2>
           <form>
               <div class="input-box">
-                  <input type="text" id="medName" name="medName" required>
-                  <label for="medName">Name</label>
+                  <input type="text" id="bookingName" name="bookingName" required>
+                  <label for="bookingName">Name</label>
               </div>
               <div class="input-box">
-                  <input type="text" id="medNumber" name="medNumber" required>
-                  <label for="medNumber">Phone Number</label>
+                  <input type="number" id="phoneNumber" name="phoneNumber" required>
+                  <label for="phoneNumber">Phone Number</label>
               </div>
               <div class="input-box">
-                  <input type="text" id="medManuf" name="medManuf" required>
-                  <label for="medManuf">Type Of Desease</label>  
+                  <input type="text" id="appointmentPurpose" name="appointmentPurpose" required>
+                  <label for="appointmentPurpose">Purpose Of Appointment</label>
+              </div>
+              <div class="select-box">
+                <label for="selectDepartment">Select Department:</label>
+                <select id="selectDepartment" required>
+                    <option value="" disabled selected>Select Role</option>
+                    <option value="Cardiology">Cardiology</option>
+                    <option value="General Surgecy">General Surgecy</option>
+                    <option value="Health Checkup Package">Health Checkup Package</option>
+                </select>
               </div>
               <div class="input-box">
-                  <input type="date" id="medExpDate" name="medExpDate" required>
-                  <label for="medExpDate">Time</label>
-              </div>
-              <div class="input-box">
-                <input type="text" id="medPrice" name="medPrice" required>
-                <label for="medPrice">Note</label>
+                  <input type="date" id="appointmentDate" name="appointmentDate" required>
+                  <label for="appointmentDate">Appointment Date</label>
               </div>
               <div class="error-notify hide">
                   Please fill in.
               </div>
           </form>
-          <button class="btn" id="addMedbtn">Book</button>
+          <button class="btn" id="addMedbtn">Add</button>
         </div>
       </div>
     </div>
@@ -122,7 +127,7 @@
 </script>
 <script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
 <script type="module" src="js/index.js"></script>
-<script type="module" src="js/doctor.js"></script>
+<script type="module" src="js/appointment.js"></script>
 <!-- <script>
   // Initial variable values
   var userPic = document.getElementById('user-sub-menu');
