--- a/public/appointment.html
+++ b/public/appointment.html
@@ -28,9 +28,9 @@
               <h3 id="myUsername">Username</h3>
             </div>
             <hr>
-            <a href="#" class="sub-menu-link">
+            <a href="profile.html" class="sub-menu-link">
               <img src="images/profiles/profile.png" alt="">
-              <p>Edit Profile</p>
+              <p>Profile</p>
               <span>></span>
             </a>
             <a href="#" class="sub-menu-link">
@@ -87,7 +87,7 @@
                   <label for="bookingName">Name</label>
               </div>
               <div class="input-box">
-                  <input type="number" id="phoneNumber" name="phoneNumber" required>
+                  <input type="text" id="phoneNumber" name="phoneNumber" required>
                   <label for="phoneNumber">Phone Number</label>
               </div>
               <div class="input-box">
