--- a/public/contact.html
+++ b/public/contact.html
@@ -28,9 +28,9 @@
               <h3 id="myUsername">Username</h3>
             </div>
             <hr>
-            <a href="#" class="sub-menu-link">
+            <a href="profile.html" class="sub-menu-link">
               <img src="images/profiles/profile.png" alt="">
-              <p>Edit Profile</p>
+              <p>Profile</p>
               <span>></span>
             </a>
             <a href="#" class="sub-menu-link">
@@ -48,7 +48,7 @@
               <p>Logout</p>
               <span>></span>
             </a>
-          </div>
+          </div> 
         </div>
       </nav>
 </header>
