--- a/public/requestADMIN.html
+++ b/public/requestADMIN.html
@@ -28,9 +28,9 @@
               <h3 id="myUsername">Username</h3>
             </div>
             <hr>
-            <a href="#" class="sub-menu-link">
+            <a href="profile.html" class="sub-menu-link">
               <img src="images/profiles/profile.png" alt="">
-              <p>Edit Profile</p>
+              <p>Profile</p>
               <span>></span>
             </a>
             <a href="#" class="sub-menu-link">
