--- a/public/profile.html
+++ b/public/profile.html
@@ -64,7 +64,7 @@
                               <a href="index.html">Home</a>
                               <a href="service.html">Service</a>
                               <a href="contact.html">Contact</a>
-                              <a href="index.html">Medical History</a>
+                              <a href="">Medical History</a>
                           </div>
                       </div>
                   </div>
