--- a/public/login.html
+++ b/public/login.html
@@ -121,5 +121,6 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script type="module" src="js/class.js"></script>
 <script type="module" src="js/login.js"></script>
+<script type="module" src="js/module.js"></script>
 
 </html>
