--- a/public/doctor.html
+++ b/public/doctor.html
@@ -80,9 +80,61 @@
         document.querySelector('.Medicines-popup').classList.remove("active");
       });
       </script>
-      <h2 id="Username">YOOO</h2>
-      <p id="Email">yo</p>
-      <button id="AppointBtn">SUP</button>
+      <div class="form-box login">
+        <h2 id="Username">YOOO</h2>
+        <p id="Email">yo</p>
+        <form>
+          <h3 id="DoctorSpec"> placeholder</h3>
+          <h3 id="DoctorYear"> placeholder</h3>
+          <h4>Save me from this</h4>
+            
+        </form>
+        <button class="btn" id="AppointBtn">Request an appointment</button>
+        <!-- <script>
+          document.getElementById("AppointBtn").addEventListener('click', function(event) {
+          document.getElementById("AppointInfo").classList.add("active");
+        });
+        </script> -->
+      </div>
+    </div>
+  </div>
+
+  <div id = "AppointInfo" class="Medicines-popup">
+    <div class="wrapper doctor">
+      <span id = "appoint_close" class="icon-close">
+        <i class="fa-solid fa-xmark"></i>
+      </span>
+      <script>
+        document.getElementById("appoint_close").addEventListener('click', function(event) {
+        document.getElementById("AppointInfo").classList.remove("active");
+      });
+      </script>
+      <div class="form-box login">
+        <h2 id="Username2">help</h2>
+        <p id="Email2">me</p>
+
+        <h2 id="Username22">help</h2>
+        <p id="Email22">me</p>
+        <form>
+            <!-- <div class="input-box">
+                <input type="text" id="UserAppointName" name="medName" required>
+                <label for="medName">Name</label>
+            </div> -->
+            <div class="input-box">
+                <input type="date" id="UserAppointDate" name="medExpDate" required>
+                <label for="medExpDate">Book Appointment Date</label>
+            </div>
+            <div class="error-notify hide">
+                Please fill in.
+            </div>
+        </form>
+        <button class="btn" id="AppointDoneBtn">Finish Request</button>
+        <script>
+          document.getElementById("AppointDoneBtn").addEventListener('click', function(event) {
+          document.getElementById("AppointInfo").classList.add("active");
+          })
+        </script>
+      </div>
     </div>
   </div>
 </div>
