--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GP Hospital</title>
-
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -52,5 +52,25 @@
         </div>
       </nav>
 </header>
+<div class="container">
+<div class="row">
+  <div class="col-md-12 mt-1">
+  <p><span style="color:blue;">GP</span> Hospital  is a multi/super speciality hospital located at the prime location of Vaishnodevi Circle, SG Road, Ahmedabad; with state-of-the-art facilities &amp; treatments at an affordable cost, encompassing wide spectrum of accurate diagnostics and elegant therapeutics created on the philosophical edifice of patient and ethical centricity ensuring humanistic dispensation.</p>
+  <ul>
+  <li> Multiple Options For Treatment.</li>
+  <li> Full Of Latest Technologies and Equipments.</li>
+  <li> Best Hospital Of 2020 Award Winner.</li>
+  <li> 24/7 Ambulance Support.</li>
+  <li> Eminent and Experienced Doctors.</li>
+  </ul>
+  <br>
+  <p>As a leading health organization in our region, we want to be a strong influence for better health and prevention, and there is no better place to start than among our own employees.</p>
+  <small>CEO OOP-Assignment</small>
+  </div>
 
+  <div class="col-md-12 mt-1">
+  <img style="width:100%;" src="images/hospital.jpeg" alt="">
+  </div>
+</div>
+</div>
 </body>
