--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         </div>
       </nav>
 </header>
-<section>
+<!-- <section>
   <button id="myButton">Click Me</button>
   <script>
     function myFunction() {
@@ -61,7 +61,7 @@
     document.getElementById('myButton').addEventListener('click', myFunction);
 
   </script>
-</section>
+</section> -->
 
 <section id="serviceSection">
   <div class="container">
