--- a/public/doctor.html
+++ b/public/doctor.html
@@ -28,9 +28,7 @@
               <h3 id="myUsername">Username</h3>
             </div>
             <hr>
-            <a href="profile.html" class="sub-menu-link">
               <img src="images/profiles/profile.png" alt="">
-              <p>Profile</p>
               <span>></span>
             </a>
             <a href="#" class="sub-menu-link">
@@ -122,7 +120,7 @@
             </div> -->
             <div class="input-box">
                 <input type="date" id="UserAppointDate" name="medExpDate" required>
-                <label for="medExpDate">Book Appointment Date</label>
+                <label for="UserAppointDate">Book Appointment Date</label>
             </div>
             <div class="error-notify hide">
                 Please fill in.
